# menu

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  docker-compose.yaml  dull-meshi-387011-fa47a3befbf8.json  index.html  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  vite.config.ts
.github/workflows/: build-test.yml  nodejs-backend.yml  nodejs-frontend.yml  render-awake.yml
backend/: .env.sample  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  server.ts  sw.js
backend/prisma/: addRecipes.py  addRecipesRakuten.py  backupRecipesRakuten.py  crawl.py  crawlTophits.py  domains.json  extractRecipes.py  fillCategories.py  getRobotsTxt.py  schema.prisma  scrape.py  translate.py
backend/recipe_scraping/: README.md  pyproject.toml
backend/recipe_scraping/src/ignore/: convert_to_katakana.ipynb  create_index_elasticsearch.ipynb  update_dishes.ipynb
backend/src/: app.test.ts  app.ts  elasticSearchClient.ts  server.test.ts  server.ts  supabaseClient.ts  swagger.json  swagger.mjs
frontend/: .env.sample  Dockerfile  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts  vite.config.ts
frontend/manifest/: manifest.webmanifest
frontend/src/: App.css  App.tsx  main.tsx  service-worker.ts  serviceWorkerRegistration.ts
manifest/: manifest.webmanifest
openapi/: openapi.json
prisma/: schema.prisma
src/: App.tsx  main.tsx  server.js
src/assets/: App.css
types/: api.ts  openapi-types.ts
(+251 files in other folders)
