[project]
name = "recipe-scraping"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bvv-1", email = "fhinnoigsr@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "recipe-scraping:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_scraping"]
